--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/styles2.css"/>
-   <title>My website</title>
+   <link rel="stylesheet" href="/Users/lisosherif16/Desktop/ Graphic and web design studio 
+   /FinalPortfolio/styles2.css"/>
+   
+  <title> pizza party </title>
 </head>
 <body>
-    <p>Hello world I'm working on my website!</p>
+    <p>Hello world I'm working on my web</p>
 </body>
 </html>
