--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="/Users/lisosherif16/Desktop/ Graphic and web design studio 
    /FinalPortfolio/styles2.css"/>
    
-  <title> pizza party </title>
+  <title>My website</title>
 </head>
 <body>
     <p>Hello world I'm working on my web</p>
