--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <title>My website</title>
 </head>
 <body>
-    <p>Hello world I'm working on my web</p>
+    <p>Hello everyone this is GWDS project</p>
 </body>
 </html>
