--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <title>My website</title>
 </head>
 <body>
-    <p>Hello everyone this is GWDS project</p>
+    <h1>Hello everyone this is my GWDS project</h1>
 </body>
 </html>
