--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Hello everyone this is my GWDS project</h1>
     <h2>my website consists of 4 parts</h2>
+    <h3>The first part is the typographic systems, which 
+        are 8 typographic systems that are each invdidually unique </h3>
 </body>
 </html>
