--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>my website consists of 4 parts</h2>
     <h3>The first part is the typographic systems, which 
         are 8 typographic systems that are each invdidually unique: </h3>
+        <p> <img src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/axial typo.png"></p>
 </body>
 </html>
