--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h2>my website consists of 4 parts</h2>
     <h3>The first part is the typographic systems, which 
         are 8 typographic systems that are each invdidually unique: </h3>
+        <h4>This is the axial typographic system which is basically when 
+            information is displayed on the right side or the left side or both of an axis </h4>
         <p> <img src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/axial typo.png"></p>
 </body>
 </html>
