--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             information is displayed on the right side or the left side or both of an axis </h4>
         <p> <img src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/axial typo.png"></p>
 
-        <h5>hello yall</h5>
+        <h5>This is the Bilateral typographic system which is basically when the text
+            is displayed in symetricall way on one axis  </h5>
 </body>
 </html>
