--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         are 8 typographic systems that are each invdidually unique: </h3>
         <h4>This is the axial typographic system which is basically when 
             information is displayed on the right side or the left side or both of an axis </h4>
-        <p> <img class=".Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/axial typo.png"></p>
+        <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/axial typo.png"></p>
 
         <h5>This is the Bilateral typographic system which is basically when the text
             is displayed in symetricall way on one axis  </h5>
