--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <h5>This is the Bilateral typographic system which is basically when the text
             is displayed in symetricall way on one axis  </h5>
+        <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Bilateral typo.png"></p>
 
 </body>
 </html>
