--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <h5>This is the Bilateral typographic system which is basically when the text
             is displayed in symetricall way on one axis  </h5>
         <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Bilateral typo.png"></p>
+        
+        <h6>This is the dilational typographic system which is basically when text 
+            expands froma centre point in a circular way </h6>
+        <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/dilational typo.png"></p>
+
 
 </body>
 </html>
