--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
             is displayed in symetricall way on one axis  </h5>
         <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Bilateral typo.png"></p>
         
-        <h6>This is the dilational typographic system which is basically when text 
+        <h6>This is the Dilational typographic system which is basically when text 
             expands froma centre point in a circular way </h6>
         <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/dilational typo.png"></p>
+       
+        <h7>This is the Grid typographic system which is basically when text is divided
+            into sections and oragized fashion.</h7>
+            <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Grid typo.png"></p>
 
 
 </body>
