--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <h7>This is the Grid typographic system which is basically when text is divided
             into sections and oragized fashion.</h7>
             <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Grid typo.png"></p>
+       
+            <h8>This is the Modular typographic system which is basically when text
+            is organized in a repetitive fashion.</h8>
+            <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/modular typo.png"></p>
 
 
 </body>
