--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <h8>This is the Modular typographic system which is basically when text
             is organized in a repetitive fashion.</h8>
             <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/modular typo.png"></p>
+           
+            <h9>This is the radial typography system which is basically when text 
+            is organized from a centre point in a sunray fashion</h9>
+            <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/radial typo.png"></p>
 
 
 </body>
