--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
             is organized in a repetitive fashion.</h8>
             <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/modular typo.png"></p>
            
-            <h9>This is the radial typography system which is basically when text 
+            <h9>This is the radial typographic system which is basically when text 
             is organized from a centre point in a sunray fashion</h9>
             <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/radial typo.png"></p>
+
+            <h10>This is the random typographic system which is basically when text
+                is oragnized in a random fashion</h10>
+                <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Random typo.png"></p>
 
 
 </body>
