--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <h10>This is the random typographic system which is basically when text
                 is oragnized in a random fashion</h10>
                 <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Random typo.png"></p>
-
+<h11>This is the Transitional typographic system  which is basically when text
+    is organized in a wavy pattern.</h11>
+    <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Transitional typo.png"></p>
 
 </body>
 </html>
