--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
 <h11>This is the Transitional typographic system  which is basically when text
     is organized in a wavy pattern.</h11>
     <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Transitional typo.png"></p>
-
+<h12>The second part is the poster,which is advertising a skating event for girls </h12>
 </body>
 </html>
