--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
     is organized in a wavy pattern.</h11>
     <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Transitional typo.png"></p>
 <h12>The second part is the poster,which is advertising a skating event for girls </h12>
-</body>
+<p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/GWDS poster .png"></p>
+</body> 
 </html>
