--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
     <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/Transitional typo.png"></p>
 <h12>The second part is the poster,which is advertising a skating event for girls </h12>
 <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/GWDS poster .png"></p>
+<h13>The third part are the coding work sheets that aided the creation of this 
+    website , Which consists of 5 worksheets (some may be interelated) </h13>
+    
 </body> 
 </html>
