--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <p> <img class="Typo-item" src="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/images/GWDS poster .png"></p>
 <h13>The third part are the coding work sheets that aided the creation of this 
     website , Which consists of 5 worksheets (some may be interelated) </h13>
-    <h14> <a href="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/index copy.html" target="_blank"></h14>
+    <h14> <a href="/Users/lisosherif16/Desktop/ Graphic and web design studio /FinalPortfolio/index copy.html" ></h14>
 
 </body> 
 </html>
