--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 <p> <img class="Typo-item" src="./images/GWDS poster .png"></p>
 <h13>The third part are the coding work sheets that aided the creation of this 
     website , Which consists of 5 worksheets (some may be interelated) </h13>
-    <h14> <a href="./index copy.html"></h14>
-
+    <h14> <a href="./index copy.html">Coding worksheet 1</a></h14>
+    <h14> <a href="./index copy 2.html">Coding worksheet 2</a></h14>
+    <h14> <a href="./index copy 3.html">Coding worksheet 3</a></h14>
+    <h14> <a href="./cake.html">Coding worksheet 4</a></h14>
+    <h14> <a href="./button.html">Coding worksheet 5</a></h14>
 </body> 
 </html>
