--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
         And lastly here is the reflection essay explaining in detail 
         the processes that took place for the creation of this webiste
     </h15>
+    <p1>This project was full of several obstacles and challenges , 
+        as it consisted of many separate individual projects that each have their own  challenges and concepts , 
+      and then are all put together in order to create a website. The poster took sometime to create as It was
+        essential to be very creative on finding the right theme and design that is appropriate for the picture that has been  chosen .
+        An important decision was taken to change the color of the picture chosen in order to make it look more interesting and eye catching for the audience.
+        Then the creativity led to adding a few stamps that are related to the posters theme and what it is about.
+        As for the typography systems it took days to complete as it was more than essential to find a creative way to fit the information given in way that is
+        similar for each of the 8 typographic systems, after a thorough research it was easily applicable to add the concept of each of the 8 typographic systems , 
+        yet they all shared one thing in common and that was making sure that the essential information in the text provided was easily readable and catches the eye of
+        the audience to ensure that they are aware of the important information in the text. Next, there are coding worksheets  which consisted of 5 coding worksheets ,
+        each work sheet aided the process of learning the fundamentals of creating an appropriate website that can easily hold all the projects and at the same time can
+         be presented in a way that allows the audience to view it without facing any difficulties or  challenges although they took some time to complete they played a critical role
+          in finishing this project with the best quality possible . As for this reflection essay which is also a big part of this project this was created to explain in full detail and 
+        step by step how this project was fulfilled and how it met all the requirements needed  . And last but not least the website itself which groups all the individual projects into one showcase ,
+        this website took several days to complete as it required a vast amount of coding in order to present the information inside in the best way possible , fortunately using the coding worksheets provided
+         the needed information for the essential ingredients of a basic website and with a few extra creative touches the website was ready to be presented to the audience in the best quality possible ensuring 
+         its easy navigation and readability and ability to high light the essential information that was intended to reach the audience .</p1>
 
 </body> 
 </html>
