--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <h15> 
         And lastly here is the reflection essay explaining in detail 
-        the processes that took place for the creation of this webiste
+        the processes that took place for the creation of this webiste :
     </h15>
     <p1>This project was full of several obstacles and challenges , 
         as it consisted of many separate individual projects that each have their own  challenges and concepts , 
